
Tue Feb 26 14:21:19 CET 2002 Paolo Molaro <lupus@ximian.com>

	* UInt64.cs: fixed Parse method () to handle some of the NumberStyle flags.

2002-02-26  Martin Baulig  <martin@gnome.org>

	* DateTime.cs: Miguel already committed this, but there was still a
	ChangeLog entry for this missing ....
	We're now reusing functionality from TimeSpan, printing dates is
	fully implemented, currently working on parsing.

	* TimeZone.cs: Fully implemented this. There's a new InternCall in the
	runtime for this.

Fri Feb 22 18:47:08 CET 2002 Paolo Molaro <lupus@ximian.com>

	* MonoType.cs: disable constructor.
	* Object.cs: make GetType() an internalcall.
	* Type.cs: added correct bindingflags to GetMethods ().
	All such calls should be reviewed to use the correct flags.

Thu Feb 21 19:23:46 CET 2002 Paolo Molaro <lupus@ximian.com>

	* Type.cs, MonoType.cs: type_is_subtype_of () changed to include extra
	argument.

Thu Feb 21 16:56:51 CET 2002 Paolo Molaro <lupus@ximian.com>

	* Type.cs: implemented IsAssignableFrom.

2002-02-21  Duco Fijma <duco@lorentz.xs4all.nl>
	* Guid.cs: fixed Guid.Guid(string) ctor. Changed format:
	"{0xdddddddd,0xdddd,0xdddd,{0xdd},{0xdd},{0xdd},{0xdd},{0xdd},{0xdd}}" 
	to "{0xdddddddd,0xdddd,0xdddd,{0xdd,0xdd,0xdd,0xdd,0xdd,0xdd}}" 
	The former is documented by Microsoft. The latter is how they
	actually implemented it in mscorlib:-)

Tue Feb 19 20:34:35 CET 2002 Paolo Molaro <lupus@ximian.com>

	* MonoCustomAttrs.cs: hooks to get the custom attributes from the
	runtime.
	* MonoType.cs: Implemented custom attributes methods.


2002-02-21  Duco Fijma <duco@lorentz.xs4all.nl>
	* Guid.cs: 

Tue Feb 19 20:34:35 CET 2002 Paolo Molaro <lupus@ximian.com>

	* MonoCustomAttrs.cs: hooks to get the custom attributes from the
	runtime.
	* MonoType.cs: Implemented custom attributes methods.

2002-02-19  Dietmar Maurer  <dietmar@ximian.com>

	* Array.cs (CopyTo): use GetLength() instead of GetUpperBound() 

2002-02-19  Duncan Mak  <duncan@ximian.com>
